samples/_failures_safe/1761309258_528a76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e9f126a.c: In function ‘main’:
./samples/SAFE/__tmp_4e9f126a.c:149:5: error: expected expression at end of input
  149 |     fill_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_4e9f126a.c:149:5: error: expected declaration or statement at end of input
